# argus

./: CLAUDE.md  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: release.yml
scripts/: pre-commit  setup-hooks.sh
src/: app.rs  diff.rs  highlight.rs  main.rs  ui.rs  viewer.rs  word_diff.rs
