[package]
name = "argus"
version = "0.1.0"
edition = "2024"
description = "A code reading tool with syntax highlighting and git diff navigation"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mizzy/argus"

[dependencies]
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
git2 = "0.20"
ratatui = "0.29"
syntect = "5"
anyhow = "1"
similar = "2"
